--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
-            <li>
+            <!-- <li>
                 <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/27medwa2el" target='_blank'>
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-facebook"></i>
                 </a>
-            </li>
+            </li> -->
             <li>
                 <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/company/pioneerssecurities/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="footer-credits text-center" >
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/27medwa2el" target="_blank" rel="nofollow noopener noreferrer">
+        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://www.linkedin.com/company/pioneerssecurities/" target="_blank" rel="nofollow noopener noreferrer">
             <div>Built by Pioneers Securities software team</div>
         </a>
         <!-- <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_brittany", "footer", "click")' href="https://github.com/27medwa2el" target="_blank" rel="nofollow noopener noreferrer">
