--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <main>
     <app-banner></app-banner>
-    <app-jobs></app-jobs>
+    <!-- <app-jobs></app-jobs> -->
     <app-about></app-about>
     <app-proyects></app-proyects>
     
@@ -9,9 +9,13 @@
     
     <app-stock-market></app-stock-market>
     <app-market-summary></app-market-summary>
+    
+    <app-sectors></app-sectors>
+    <app-market-watch></app-market-watch>
     <app-news></app-news>
     <app-contact-us></app-contact-us>
     <app-contact></app-contact>
+
     
 </main>
 
