--- a/src/app/components/home/jobs/jobs.component.html
+++ b/src/app/components/home/jobs/jobs.component.html
@@ -11,7 +11,7 @@
           <a href="#">Read More</a>
         </div>
         <div class="col-6 about-img">
-            <img src="../../../../assets/images/vision3.jpeg" class="img-fluid">
+            <img src="assets/images/vision3.jpeg" class="img-fluid">
         </div>
       </div>
     </div>
