--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,43 +1,34 @@
-<div class="jobs">
+<div class="empty-space"></div>
+<div class="jobs" [dir]="'Direction' | translate">
     <div class="container">
-      <div class="jobs-inner">
-        <div class="row mx-2">
-            <div class="col-md-6">
-              <h2>Who we are</h2>
-              <p>
-                We are a fully integrated investment holding company with a diverse portfolio, targeting compelling business opportunities to create superior shareholder value over the long term, not only in Egypt and the MENA region but globally.
-                Tapping into our deep local knowledge, proven track record, and extensive business networks to identify clear winners and unlock their inherent value, our capital is at work in over 50 portfolio companies that employ c. 6,000 people.
-              </p>
+        <div class="jobs-inner">
+            <div class="row mx-2">
+                <div class="col-md-6">
+                    <h2>{{ "WhoWeAre.Title" | translate }}</h2>
+                    <p>{{ "WhoWeAre.Content" | translate }}</p>
+                </div>
+                <div class="col-md-6">
+                    <img [src]="'WhoWeAre.Image' | translate" class="img-fluid" alt="{{ 'WhoWeAre.Title' | translate }}">
+                </div>
             </div>
-            <div class="col-md-6">
-              <img src="../../../../assets/images/vision1.jpeg" class="img-fluid" alt="Who we are">
+            <div class="row mt-4 mx-2">
+                <div class="col-md-6">
+                    <img [src]="'Mission.Image' | translate" class="img-fluid" alt="{{ 'Mission.Title' | translate }}">
+                </div>
+                <div class="col-md-6">
+                    <h2>{{ "Mission.Title" | translate }}</h2>
+                    <p>{{ "Mission.Content" | translate }}</p>
+                </div>
             </div>
-          </div>
-          <div class="row mt-4 mx-2">
-            <div class="col-md-6">
-              <img src="../../../../assets/images/vision2.jpeg" class="img-fluid" alt="Mission">
+            <div class="row mt-4 mx-2">
+                <div class="col-md-6">
+                    <h2>{{ "Vision.Title" | translate }}</h2>
+                    <p>{{ "Vision.Content" | translate }}</p>
+                </div>
+                <div class="col-md-6">
+                    <img [src]="'Vision.Image' | translate" class="img-fluid" alt="{{ 'Vision.Title' | translate }}">
+                </div>
             </div>
-            <div class="col-md-6">
-              <h2>Mission</h2>
-              <p>
-                We are a fully integrated investment holding company with a diverse portfolio, targeting compelling business opportunities to create superior shareholder value over the long term, not only in Egypt and the MENA region but globally.
-                Tapping into our deep local knowledge, proven track record, and extensive business networks to identify clear winners and unlock their inherent value, our capital is at work in over 50 portfolio companies that employ c. 6,000 people.
-              </p>
-            </div>
-          </div>
-          <div class="row mt-4 mx-2">
-            <div class="col-md-6">
-              <h2>Vision</h2>
-              <p>
-                We are a fully integrated investment holding company with a diverse portfolio, targeting compelling business opportunities to create superior shareholder value over the long term, not only in Egypt and the MENA region but globally.
-                Tapping into our deep local knowledge, proven track record, and extensive business networks to identify clear winners and unlock their inherent value, our capital is at work in over 50 portfolio companies that employ c. 6,000 people.
-              </p>
-            </div>
-            <div class="col-md-6">
-              <img src="../../../../assets/images/vision3.jpeg" class="img-fluid" alt="Vision">
-            </div>
-          </div>
+        </div>
     </div>
 </div>
-</div>
-  
