--- a/src/app/components/home/banner/banner.component.css
+++ b/src/app/components/home/banner/banner.component.css
@@ -6,18 +6,18 @@
 }
 
 .trade-text {
-  font-size: 2.5rem; /* Adjust the font size as needed */
+  font-size: 2.5rem; 
   color: black;
   text-decoration: none;
   font-weight: bold;
 }
 
 .empty-space {
-  margin-top: 80px; /* Adjust the value as needed */
+  margin-top: 80px;
 }
 
 .trade-text:hover {
-  color: brown; /* Change color on hover */
+  color: brown; 
 }
 
 .banner .row {
@@ -25,33 +25,50 @@
 }
 
 .banner img {
-  display: block; /* Ensure images are displayed as blocks */
+  display: block; 
 }
 
 .clickable-photo-container {
-  position: absolute; /* Position the container absolutely */
-  bottom: 20px; /* Adjust as needed */
-  left: 58%; /* Adjust as needed */
-  z-index: 5; /* Ensure it appears above the first photo */
+  position: absolute; 
+  bottom: 20px; 
+  left: 58%; 
+  z-index: 5; 
   display: flex;
   flex-direction: column;
 }
 
 .clickable-photo img {
-  background-color: black;
-  width: 150px; /* Set a fixed width */
+  background-color: #112240;
+  width: 150px; 
   height: auto;
-  min-width: 100px; /* Prevents the image from becoming too small */
+  min-width: 100px; 
 }
 
 @media (max-width: 768px) {
   .clickable-photo img {
-    width: 100px; /* Adjust the width for smaller screens */
+    width: 100px; 
+  }
+  .empty-space{
+    margin-top: 250px;
+  }
+  
+}
+@media (max-width: 827px) {
+  .empty-space{
+    margin-top: 250px;
+  }
+  
+}
+@media (max-width: 1000px) {
+  .empty-space{
+    margin-top: 230px;
   }
 }
-
 @media (max-width: 576px) {
   .clickable-photo img {
-    width: 80px; /* Further adjust the width for very small screens */
+    width: 80px; 
+  }
+  .empty-space{
+    margin-top: 250px;
   }
 }
