--- a/src/app/components/home/contact/contact.component.scss
+++ b/src/app/components/home/contact/contact.component.scss
@@ -1,78 +1,130 @@
 @import "./../../../../variables.scss";
 
-.contact{
+.contact {
+  margin: 0 auto;
+  max-width: 1000px;
+  text-align: center;
+  display: table;
 
-    margin: 0 auto;
-    max-width: 1000px;
+  .container {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .contact-title {
+    display: flex;
+    justify-content: center;
+    font-size: 60px;
+    font-weight: 600;
+    color: $LightestSlate;
+    margin: auto;
+  }
+
+  .contact-pre-title {
+    margin: 10px 0 40px;
+    font-size: 16px;
+    color: $Green;
+    font-family: $CodeFont;
     text-align: center;
-    max-width: 600px;
-    margin: 0 auto;
-    height: 100vh;
-    display: table;
-
-    .container{
-        display: table-cell;
-        vertical-align: middle;
-    }
-
-    .contact-title{
-
-        position: relative;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-align-items: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        white-space: nowrap;
-        font-size: 60px;
-        font-weight: 600;
-        color: $LightestSlate;
-        margin: auto;
-        width: fit-content;
-    }
-    .contact-pre-title{
-        position: relative;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-align-items: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        margin: 10px 0 40px;
-        width: 100%;
-        white-space: nowrap;
-        font-size: 32px;
-        display: block;
-        color: $Green;
-        font-size: 16px;
-        font-family: $CodeFont;
-        font-weight: normal;
-        margin-bottom: 20px;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        text-align: center;
-    }
-
+  }
 }
 
-@media (max-width: 768px){
-    
-    .contact{
-        height: 100vh;
-        padding: 0 !important;
-        margin: 0 auto !important;
-        display: table;
+.branches-section {
+  margin-top: 20px;
+  text-align: center;
 
-        .container{
-            display: table-cell;
-            vertical-align: middle;
-        }
+  .branches-btn {
+    background-color: $Green; 
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border-color: $Green;
+    cursor: pointer;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 6px rgba(248, 247, 247, 0.1);
+    margin-top: 2%;
+    &:hover {
+      background-color: darken($Green, 10%);
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
     }
+
+    i {
+      margin-right: 10px;
+    }
+  }
+
+  .branches-container {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    transition: opacity 0.5s ease-out, height 0.5s ease-out;
+
+    .branch-item {
+      background-color: #f0f4f8;
+      border: 1px solid $LightestSlate;
+      border-radius: 5px;
+      border-color: $Green;
+      padding: 20px;
+      margin: 10px;
+      width: calc(33.333% - 20px);
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
+
+      &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      }
+
+      .branch-icon {
+        font-size: 2rem;
+        margin-bottom: 10px;
+        color: $Green;
+      }
+
+      .branch-details {
+        h5 {
+          font-size: 1.2rem;
+          margin-bottom: 5px;
+          color: $Green;
+        }
+
+        p {
+          margin: 0;
+          font-size: 0.9rem;
+          cursor: pointer;
+          color: $LightestSlate;
+
+          a {
+            color: $Green;
+            text-decoration: none;
+
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+
+        p:hover {
+          color: darken($Green, 10%);
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .contact {
+    padding: 0 !important;
+    margin: 0 auto !important;
+    display: block;
+  }
+
+  .branches-container {
+    .branch-item {
+      width: calc(100% - 20px);
+    }
+  }
 }
