--- a/src/app/components/home/news/news.component.scss
+++ b/src/app/components/home/news/news.component.scss
@@ -24,6 +24,8 @@
     .news-item {
       display: flex;
       margin-bottom: 20px;
+      direction: rtl;
+      text-align: right;
       cursor: pointer;
   
       .news-image {
@@ -37,7 +39,7 @@
   
       .news-content {
         flex: 2;
-        padding-left: 20px;
+        padding-right: 20px;
   
         .news-title {
           font-size: 1.5em;
@@ -71,7 +73,7 @@
         cursor: pointer;
         font-size: 1.2em;
         margin-bottom: 20px;
-        color: #007bff;
+        color: $LightNavy;
       }
   
       .news-detail-image {
@@ -81,7 +83,7 @@
   
         img {
           width: 100%;
-          height: auto;
+          height: 150px;
           border-radius: 8px;
           animation: imageGrow 0.5s;
         }
@@ -101,6 +103,8 @@
         .news-detail-summary {
           font-size: 1.2em;
           line-height: 1.6;
+          direction: rtl;
+          text-align: right;
         }
       }
     }
@@ -123,4 +127,34 @@
       transform: scale(1);
     }
   }
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
   
+  .pagination button {
+    margin: 0 5px;
+    padding: 8px 12px;
+    border: none;
+    background-color: rgb(228, 224, 224);
+    
+    color: black;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .pagination button:hover:not(.active) {
+    background-color: gray;
+  }
+  
+  .pagination button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+  
+  .pagination button.active {
+    background-color: $LightNavy;
+    color: white;
+  }
