--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -32,8 +32,12 @@ h3 {
 }
 
 .empty-space {
-    background-color: $Navy; // Set background color
-    height: 100px; // Add height to make it visible
-    margin: 0; // Ensure there is no margin
-    padding: 0; // Ensure there is no padding
+    background-color: $Navy; 
+    height: 50px; 
+    margin: 0; 
+    padding: 0; 
+}
+[dir="rtl"] {
+text-align: right;
+
 }
